Update azure-pipelines-dev.yml for Azure Pipelines

--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -51,6 +51,4 @@ jobs:
     dependsOn: GetVersion
     steps:
 
-      - script: |
-        sleep 10
-        echo "the name of $(IP)"
+      - bash: sleep 10 & echo $(IP) 
