--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -129,7 +129,7 @@ jobs:
       - task: Delay@1
         displayName: Setting Up
         inputs:
-          delayForMinutes: '1'
+          delayForMinutes: '2'
 
   - job: Test
     strategy:
@@ -152,10 +152,10 @@ jobs:
           npm ci
         displayName: 'Install dependencies'
 
-      - bash: until curl -sf $CIPSERVER; do echo -n "."; sleep 1; done; sleep 10
+      - bash: |
+          echo $(CIPSERVER)
+          until curl -sf $(CIPSERVER); do echo -n "."; sleep 1; done; sleep 10
         displayName: 'Wait until CI Server is Up to Test on it'
-        env: 
-          CIPSERVER: $(CIPSERVER)
 
       - script: |
           npx cypress run --spec "/cypress/integration//Desktop/*" --reporter-options mochaFile=results/Desktop_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Desktop" --tag $(STAGE) \
