--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -154,12 +154,10 @@ jobs:
 
       - bash: |
           echo $(CIPSERVER)
-          until curl -sf $(CIPSERVER) 
-          do 
-          echo -n "."
-          sleep 1
-          done
+          until curl -sf $CIPSERVER:8080; do echo -n "."; sleep 1; done; sleep 10
         displayName: 'Wait until CI Server is Up to Test on it'
+        env: 
+          CIPSERVER: $(CIPSERVER)
 
       - script: |
           npx cypress run --spec "/cypress/integration//Desktop/*" --reporter-options mochaFile=results/Desktop_Results.xml --record --parallel --ci-build-id $(buildVersion) --group "Desktop" --tag $(STAGE) \
