--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -129,7 +129,7 @@ jobs:
       - task: Delay@1
         displayName: Setting Up
         inputs:
-          delayForMinutes: '3'
+          delayForMinutes: '1'
 
   - job: Test
     strategy:
@@ -154,7 +154,7 @@ jobs:
 
       - bash: |
           echo $CIPSERVER
-          curl --write-out %{http_code} --silent --output /dev/null $CIPSERVER
+          while [[ "$(curl --write-out %{http_code} --silent --output /dev/null $CIPSERVER != "200" ]];do echo -n '.';sleep 2; done
         displayName: 'Wait until CI Server is Up to Test on it'
         env: 
           CIPSERVER: $(CIPSERVER)
