--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -156,7 +156,7 @@ jobs:
         inputs:
           targetType: 'inline'
           script: |
-            write-output $CIPSERVER
+            write-output $CIPSERVER:8080
             while((Test-Connection -ComputerName $CIPSERVER -TcpPort 8080) -like '*False*'){
               Start-Sleep -s 2
               Write-Host -NoNewline '.'
