--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -77,10 +77,10 @@ jobs:
           CI: $(CI)
         
       - bash: |
-          echo $(CIPSERVER)
+          echo localhost:8080
           while [ 1 = 1 ]
           do
-          curl $(CIPSERVER):8080
+          curl localhost:8080
           done
         name: Curl
 
